[package]
name = "procrastinate"
version = "0.1.0"
edition = "2021"

rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4, <4.5", features = ["derive"] }
file-lock = "2.1.11"
nom = "7.1.3"
notify = "6.1.1"
notify-rust = "4.10, < 4.11"
ron = "0.8.1"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
unwrap-infallible = "0.1.5"

[[bin]]
name = "procrastinate"

[[bin]]
name = "procrastinate-work"

[[bin]]
name = "procrastinate-dameon"
