[package]
name = "procrastinate"
version = "0.4.1"
edition = "2021"

rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4, <4.5", features = ["derive"] }
constcat = "0.5.0"
env_logger = "0.11.3"
file-lock = "2.1.11"
log = "0.4.21"
nom = "7.1.3"
notify = "6.1.1"
notify-rust = "4.10, < 4.11"
ron = "0.8.1"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread", "time", "sync", "signal"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
unwrap-infallible = "0.1.5"

[[bin]]
name = "procrastinate"

[[bin]]
name = "procrastinate-work"

[[bin]]
name = "procrastinate-daemon"

[package.metadata.release]
allow-branch = ["main"]
publish = false
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/wasabi375/procrastinate/compare/{{tag_name}}...HEAD", exactly=1},
]
