[package]
name = "procrastinate-daemon"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procrastinate = { path = "..", package = "procrastinate-lib" }
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
notify.workspace = true
notify-rust.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
